adding comments dispay and submission
also broke out submission controller files

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 
 	<body>
 		<h1>Reviews</h1>
-		<section id="BVRRContainer" class="_BVContentLoadingContainer">
+		<section id="BVRRContainer">
 			<div class="_BVQuickTakeContainer"></div>
 			<div class="_BVReviewBodyContainer"></div>
 		</section>
 		<h1>Ask & Answer</h1>
-		<section id="BVQAContainer" class="_BVContentLoadingContainer">
+		<section id="BVQAContainer">
 			<div class="_BVQuestionAnswerBodyContainer"></div>
 		</section>
 		<h1>Stories</h1>
-		<section id="BVSYContainer" class="_BVContentLoadingContainer">
+		<section id="BVSYContainer">
 			<div class="_BVStoryBodyContainer"></div>
 		</section>
 	</body>
