adding loading animation
also fixed a bug in the pagination controller

--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 
 	<body>
 		<h1>Reviews</h1>
-		<section id="BVRRContainer">
-			<div class="_BVQuickTakeContainer"></div>
-			<div class="_BVReviewBodyContainer"></div>
-		</section>
+		<section id="BVRRContainer"></section>
 		<h1>Ask & Answer</h1>
 		<section id="BVQAContainer">
 			<div class="_BVQuestionAnswerBodyContainer"></div>
