adding loading animation wrappers

--- a/submission.html
+++ b/submission.html
@@ -6,6 +6,6 @@
 	</head>
 
 	<body>
-		<section id="BVSubmissionContainer" class="_BVSubmissionContainer _BVContentLoadingContainer"></section>
+		<section id="BVSubmissionContainer" class="_BVSubmissionContainer"></section>
 	</body>
 </html>
