updated variables to work on staging site

--- a/submission.html
+++ b/submission.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<script src="http://localhost:8888/bvSDKFramework/js/jquery.min.1.9.1.js"></script>
-		<script src="http://localhost:8888/bvSDKFramework/js/loadSubmission.js"></script>
+		<script src="http://bbypoc.ts.bazaarvoice.com/bvSDKFramework/js/jquery.min.1.9.1.js"></script>
+		<script src="http://bbypoc.ts.bazaarvoice.com/bvSDKFramework/js/loadSubmission.js"></script>
 	</head>
 
 	<body>
