added uas parsing function and submission example

--- a/submission.html
+++ b/submission.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
+		<script type="text/javascript">var userToken = "e1ce23fbe1886ad16c07fedaec2795fc5573657249643d6e65777573657231323326646174653d3230313330383031266d61786167653d313030";</script>
 		<script src="http://localhost:8888/bvSDKFramework/js/jquery.min.1.9.1.js"></script>
 		<script src="http://localhost:8888/bvSDKFramework/js/loadSubmission.js"></script>
 	</head>
