--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<script>var productId = "5612094";</script>
-		<script src="http://localhost:8888/bvSDKFramework/js/jquery.min.1.9.1.js"></script>
-		<script src="http://localhost:8888/bvSDKFramework/js/loadReviews.js"></script>
+		<script src="/bvSDKFramework/js/jquery.min.1.9.1.js"></script>
+		<script src="/bvSDKFramework/js/loadReviews.js"></script>
 	</head>
 
 	<body>
